--- a/src/index.html
+++ b/src/index.html
@@ -32,5 +32,19 @@
   <h1 class="font-bold">and organic.</h1>
   <button class="bg-[#EFD372] flex items-center px-2 py-1 rounded-[15px] text-[28px]">Explore Now <img class="mt-[10px]" src="/Vector (2).png" alt=""></button>
 </div>
+<div class="flex flex-col w-[95%] lg:flex-row w-[90%] justify-between m-auto mt-[100px]">
+
+<div class="lg:h-[400px] lg:w-[600px] bg-[url('../img.png')]  rounded-4xl bg-cover bg-center bg-no-repeat text-[30px] pt-[110px] pl-[50px] text-white">
+    <h1>Natural!!</h1>
+    <h1 class="font-bold">Get Garden</h1>
+    <h1 class="font-bold">Fresh Fruits</h1>
+ </div>
+ <div class="lg:h-[400px] mt-[50px] lg:mt-[0] lg:w-[600px] bg-[url('../imm.png')]  rounded-4xl bg-cover bg-center bg-no-repeat text-[30px] pt-[110px] pl-[50px] text-white">
+    <h1>Offer!!</h1>
+    <h1 class="font-bold">Get 10% off</h1>
+    <h1 class="font-bold">on Vegetables</h1>
+ </div>
+ </div>
+ 
 </body>
 </html>
