--- a/src/index.html
+++ b/src/index.html
@@ -46,5 +46,40 @@
  </div>
  </div>
  
+
+ <div class="h-[900px] mt-[100px]  w-full bg-[url('../iii.png')]  rounded-4xl bg-cover bg-center bg-no-repeat text-[30px] pt-[110px] pl-[50px]">
+    <div class="flex flex-col lg:flex-row w-[100%] justify-between m-auto items-center">
+        <div>
+ <img class="w-[900px]" src="/IMAGE (5).png" alt="">
+ </div>
+ <div>
+ <p>About Us</p>
+ <h1>We Believe in Organic</h1>
+ <h1>Foods For Strong Health</h1>
+ <p class="w-[85%]">Welcome to the world of natural and organic. Here you can discover the bounty of nature. We have grown on the principles of health, and care. We aim to give our customers a healthy chemical-free meal for perfect nutrition.</p>
+
+ 
+ <div class="flex flex-col lg:flex-row  items-center">
+    <div>
+        <img class="ml-[-50px] lg:ml-[0]" src="/Frame (1).png" alt="">
+    </div>
+    <div>
+        <h1>Organic Foods Only</h1>
+        <p class="w-[70%]">The Product that you ordered will be verified that we have or not if have we will start to move on with the next step.</p>
+    </div>
+     </div>
+     <div class="flex flex-col lg:flex-row items-center">
+    <div>
+        <img class="ml-[-50px] lg:ml-[0]" src="/Frame (2).png" alt="">
+    </div>
+    <div>
+        <h1>Quality Standards</h1>
+        <p class="w-[70%]">Once your product is packed it will be delivered to your nearby locality you can directly visit the to buy the product.</p>
+    </div>
+     </div>
+ </div>
+  </div>
+ </div>
+ 
 </body>
 </html>
