--- a/src/index.html
+++ b/src/index.html
@@ -80,6 +80,101 @@
  </div>
   </div>
  </div>
- 
+
+
+<div class="flex flex-col lg:flex-row ml-[20px] lg:ml-[0] lg:ml-[150px] lg:w-[80%] lg:justify-between lg:m-auto">
+<div class="h-[450px] mt-[100px]  w-[350px] bg-[url('../qqq.png')]  rounded-4xl bg-cover bg-center bg-no-repeat text-[20px] pt-[20px] pl-[20px]">
+<button class="bg-[#274C5B] px-4 py-1 rounded-2xl">Vegetable</button>
+<img src="/IMAGE (6).png" alt="">
+<p>Calabrese Broccoli</p>
+<div class="flex items-center gap-[5px]">
+    <div>
+        <p>$ 25.00 USD</p>
+    </div>
+    <div ><p class="font-bold"> $ 21.00 USD</p></div>
+    <div>
+        <img src="/IMAGE (7).png" alt="">
+    </div>
+</div>
+</div>
+<div class="h-[450px] mt-[100px]  w-[350px] bg-[url('../qqq.png')]  rounded-4xl bg-cover bg-center bg-no-repeat text-[20px] pt-[20px] pl-[20px]">
+<button class="bg-[#274C5B] px-4 py-1 rounded-2xl">Vegetable</button>
+<img src="/IMAGE (8).png" alt="">
+<p>Calabrese Broccoli</p>
+<div class="flex items-center gap-[5px]">
+    <div>
+        <p>$ 25.00 USD</p>
+    </div>
+    <div ><p class="font-bold"> $ 21.00 USD</p></div>
+    <div>
+        <img src="/IMAGE (7).png" alt="">
+    </div>
+</div>
+</div>
+<div class="h-[450px] mt-[100px]  w-[350px] bg-[url('../qqq.png')]  rounded-4xl bg-cover bg-center bg-no-repeat text-[20px] pt-[20px] pl-[20px]">
+<button class="bg-[#274C5B] px-4 py-1 rounded-2xl">Mill</button>
+<img src="/IMAGE (9).png" alt="">
+<p>Calabrese Broccoli</p>
+<div class="flex items-center gap-[5px]">
+    <div>
+        <p>$ 25.00 USD</p>
+    </div>
+    <div ><p class="font-bold"> $ 21.00 USD</p></div>
+    <div>
+        <img src="/IMAGE (7).png" alt="">
+    </div>
+</div>
+</div>
+</div>
+
+
+
+
+<div class="flex flex-col lg:flex-row  ml-[20px] lg:ml-[0] lg:ml-[150px] lg:w-[80%] lg:justify-between lg:m-auto">
+<div class="h-[450px] mt-[100px]  w-[350px] bg-[url('../qqq.png')]  rounded-4xl bg-cover bg-center bg-no-repeat text-[20px] pt-[20px] pl-[20px]">
+<button class="bg-[#274C5B] px-4 py-1 rounded-2xl">Vegetable</button>
+<img src="/IMAGE (10).png" alt="">
+<p>Calabrese Broccoli</p>
+<div class="flex items-center gap-[5px]">
+    <div>
+        <p>$ 25.00 USD</p>
+    </div>
+    <div ><p class="font-bold"> $ 21.00 USD</p></div>
+    <div>
+        <img src="/IMAGE (7).png" alt="">
+    </div>
+</div>
+</div>
+<div class="h-[450px] mt-[100px]  w-[350px] bg-[url('../qqq.png')]  rounded-4xl bg-cover bg-center bg-no-repeat text-[20px] pt-[20px] pl-[20px]">
+<button class="bg-[#274C5B] px-4 py-1 rounded-2xl">Fru</button>
+<img src="/IMAGE (11).png" alt="">
+<p>Calabrese Broccoli</p>
+<div class="flex items-center gap-[5px]">
+    <div>
+        <p>$ 25.00 USD</p>
+    </div>
+    <div ><p class="font-bold"> $ 21.00 USD</p></div>
+    <div>
+        <img src="/IMAGE (7).png" alt="">
+    </div>
+</div>
+</div>
+<div class="h-[450px] mt-[100px]  w-[350px] bg-[url('../qqq.png')]  rounded-4xl bg-cover bg-center bg-no-repeat text-[20px] pt-[20px] pl-[20px]">
+<button class="bg-[#274C5B] px-4 py-1 rounded-2xl">Mill</button>
+<img src="/IMAGE (12).png" alt="">
+<p>Calabrese Broccoli</p>
+<div class="flex items-center gap-[5px]">
+    <div>
+        <p>$ 25.00 USD</p>
+    </div>
+    <div ><p class="font-bold"> $ 21.00 USD</p></div>
+    <div>
+        <img src="/IMAGE (7).png" alt="">
+    </div>
+</div>
+</div>
+</div>
+
+
 </body>
 </html>
