--- a/src/index.html
+++ b/src/index.html
@@ -175,6 +175,21 @@
 </div>
 </div>
 
-
+<div class="flex flex-col lg:flex-row items-center gap-50">
+    <div class="mt-[100px]">
+        <img src="/IMAGE (13).png" alt="">
+    </div>
+    <div class="lg:mt-[100px] mt-[20px] ml-[80px] lg:ml-[0]">
+        <p>Eco Friendly</p>
+        <h1 class="text-[30px] font-bold mt-[20px]">From our Farm</h1>
+        <h1  class="text-[30px] font-bold">to your Home.</h1>
+        <p  class=" font-bold mt-[15px]">Choose Your Products</p>
+        <p class="w-[65%] mt-[15px]">In our listing, we have several collections of organic products. This is the place where you need to choose the product you want.</p>
+        <p  class=" font-bold mt-[15px]">Farmers will produce it</p>
+        <p class="w-[60%] mt-[15px]">The Product that you ordered will be verified that we have or not if have we will start to move on with the next step.</p>
+        <p  class="font-bold mt-[15px]">We Can Delivery too</p>
+        <p class="w-[60%] mt-[15px]">If you are not comfortable going to the nearby market place we also will deliver your product to your doorstep.</p>
+    </div>
+</div>
 </body>
 </html>
