--- a/src/index.html
+++ b/src/index.html
@@ -191,5 +191,20 @@
         <p class="w-[60%] mt-[15px]">If you are not comfortable going to the nearby market place we also will deliver your product to your doorstep.</p>
     </div>
 </div>
+<div class="bg-[#EFF6F1] h-[640px] mt-[100px]">
+<div class="flex w-[80%] justify-between m-auto">
+<div class="h-[450px] mt-[100px]  w-[350px] bg-[url('../bg2.png')]  rounded-4xl bg-cover bg-center bg-no-repeat text-[20px] pt-[20px]  pt-[203px] pl-[70px]">
+<button class="bg-white px-12 py-4 rounded-[10px]">Fruit Juice</button>
+</div>
+<div class="h-[450px] mt-[100px]  w-[350px] bg-[url('../bg3.png')]  rounded-4xl bg-cover bg-center bg-no-repeat text-[20px] pt-[20px]  pt-[203px] pl-[70px]">
+<button class="bg-white px-12 py-4 rounded-[10px]">Organic Food</button>
+</div>
+<div class="h-[450px] mt-[100px]  w-[350px] bg-[url('../bg4.png')]  rounded-4xl bg-cover bg-center bg-no-repeat text-[20px] pt-[20px]  pt-[203px] pl-[70px]">
+<button class="bg-white px-12 py-1 rounded-[10px]">Organic Food</button>
+</div>
+</div>
+</div>
+
+
 </body>
 </html>
