--- a/src/index.html
+++ b/src/index.html
@@ -191,8 +191,8 @@
         <p class="w-[60%] mt-[15px]">If you are not comfortable going to the nearby market place we also will deliver your product to your doorstep.</p>
     </div>
 </div>
-<div class="bg-[#EFF6F1] h-[640px] mt-[100px]">
-<div class="flex w-[80%] justify-between m-auto">
+<div class=" bg-[#EFF6F1] h-[640px] mt-[100px] ">
+<div class="flex flex-col lg:flex-row w-[80%] justify-between m-auto">
 <div class="h-[450px] mt-[100px]  w-[350px] bg-[url('../bg2.png')]  rounded-4xl bg-cover bg-center bg-no-repeat text-[20px] pt-[20px]  pt-[203px] pl-[70px]">
 <button class="bg-white px-12 py-4 rounded-[10px]">Fruit Juice</button>
 </div>
@@ -258,6 +258,64 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+
+                <section class="max-w-400 m-auto w-[90%]">
+            <div class="bg-[url('../ttt.png')] lg:h-80 h-120 bg-no-repeat bg-cover lg:w-345 mt-20">
+                <div class="text-white lg:flex lg:flex-row flex flex-col  justify-between px-10 lg:py-0 py-5 lg:gap-0 gap-5 lg:pt-25 items-center ">
+                    <div>
+                        <h1 class="text-[50px] font-bold">Subscribe our</h1>
+                        <h1 class="text-[50px] font-bold">Newsletter</h1>
+                    </div>
+
+                    <div class="lg:flex lg:flex-row flex flex-col gap-5">
+                        <p class="text-black bg-white w-fit py-3 px-3 pr-23 rounded-sm">Enter your email address</p>
+
+                        <div class="bg-[#274C5B] flex items-center gap-5 py-3 px-5 rounded-sm w-fit">
+                            <p>Subscribe</p>
+                            <div><img src="./src/IMAGE (29).png" alt=""></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+
+         <section class="max-w-400 m-auto w-[90%] mt-20 lg:flex lg:flex-row flex flex-col lg:gap-0 gap-5 items-center justify-center">
+            <div class="flex flex-col gap-5 lg:border-r-2 w-fit p-5 text-center lg:text-end border-gray-300">
+                <h1 class="text-[50px] font-bold">Contact Us</h1>
+
+                <div>
+                    <p class="font-bold">Email</p>
+                    <p>needhelp@organick.com</p>
+                </div>
+
+                <div>
+                    <p class="font-bold">Phone</p>
+                    <p>123 (1254) 1452</p>
+                </div>
+                <div>
+                    <p class="font-bold">Address</p>
+                    <p>88 Road, Brooklyn Street, USA</p>
+                </div>
+            </div>
+
+            <div class="text-center flex gap-5 flex-col items-center">
+                <div><img src="/IMAGE (1).png" alt=""></div>
+                <p class="lg:w-95">We are a popular and farming company aspiring to be a leader in the Organic food industry.</p>
+
+                <div><img src="/Frame (6).png" alt=""></div>
+            </div>
+
+            <div class="lg:border-l-2  flex flex-col gap-4 lg:text-start text-center border-gray-300 p-5">
+                <h1 class="text-[50px] font-bold">Utility Pages</h1>
+                <p>Style Guide</p>
+                <p>Protected</p>
+                <p>Page Not Found</p>
+                <p>Changelog</p>
+                <p>Licenses</p>
             </div>
         </section>
 </body>
